# yt-analytics-hub

./: .dockerignore  .env.template  .gitignore  Caddyfile  Dockerfile  FINAL_UX_REVIEW.md  INSTALLATION_GUIDE.md  LATEST_UPDATES.md  LICENSE  PHASE_4_COMPLETION.md  QUICKSTART_FASTAPI.md  QUICK_REFERENCE.md  README.md  SAVED_VIDEOS_FEATURE_COMPLETE.md  SAVED_VIDEOS_QUICK_GUIDE.md  TODO.md  UI_REDESIGN_COMPLETE.md  UX_IMPROVEMENTS_SUMMARY.md  UX_VERIFICATION_REPORT.md  diagnose.py  diagnostic_display_issue.py  docker-compose.yml  main_api.py  pyproject.toml  requirements.txt  requirements_fastapi.txt  test_frontend_flow.py  test_saved_videos.py  test_ui_redesign.py  test_ux.py  test_ux_simple.py  verify_app.py
.github/workflows/: ci.yml
docs/screenshots/: README.md
scripts/: run.ps1  run.sh
static/: app.js  styles.css
templates/: index.html
tests/: conftest.py  test_analytics.py  test_api.py  test_api_endpoints.py  test_auth.py  test_database.py  test_fetcher.py  test_integration.py  test_pagination.py  test_rate_limit.py  test_video_analytics.py
youtube_analytics/: __init__.py  analytics.py  config.py  database.py  fetcher.py  video_analytics.py  visualizer.py
youtube_analytics/api/: __init__.py  auth.py  background.py  channels.py  deps.py  errors.py  pagination.py  rate_limit.py  schemas.py  statistics.py  system.py  videos.py
youtube_analytics/static/: app.js  styles.css
youtube_analytics/static/js/: advanced-analytics.js  analytics-helpers.js  channel-charts.js  ui-enhancements.js  video-advanced-analytics.js  video-charts.js
youtube_analytics/templates/: index.html
